🐛 fix: NUS YLL School data not showing up in mgmt home page

--- a/cgh_project/src/styles/managementhomepage.css
+++ b/cgh_project/src/styles/managementhomepage.css
@@ -91,9 +91,9 @@ Filter Header .filter-section h3 {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
-.reset-button {
-  background-color: #0083ca;
-  color: white;
+.reset-button, .filter-button {
+  background-color: #0083ca !important;
+  color: white !important;
 }
 
 .reset-button:hover {
@@ -413,7 +413,7 @@ td:first-child {
   vertical-align: middle;
 }
 
-.greyed-out {
+.greyed-out td{
   opacity: 0.5;
-  text-decoration: line-through;
+  text-decoration: line-through !important;
 }
